--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.4",
+    "mysql": "^2.18.1",
     "uuid": "^10.0.0"
   }
 }
